# IT-Assets-Management-System

./: Additional.cpp  Additional.h  CMakeLists.txt  main.cpp
Assets/: Application.cpp  Application.h  AssetController.cpp  AssetController.h  AssetManager.cpp  AssetManager.h  AssetRemove.cpp  AssetRemove.h  AssetUpdate.cpp  AssetUpdate.h  Assets.cpp  Assets.h  Server.cpp  Server.h
TeamProperties/: Analytics.cpp  Analytics.h  Cybersecurity.cpp  Cybersecurity.h  Engineering.cpp  Engineering.h  ITeamAssetProvider.h  Infrastructure.cpp  Infrastructure.h  Support.cpp  Support.h  TeamController.cpp  TeamController.h  TeamMenu.cpp  TeamMenu.h
txtFileHolder/: globalServer.txt  infrastructureApp.txt  supportApp.txt
